--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,17 +32,17 @@ body {
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
+    --radius: 1rem;
   }
   .dark {
-    --background: 0 0% 3.9%;
+    --background: 223 29% 6%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
+    --primary: 198 90% 48%;
+    --primary-foreground: 0 0% 100%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
@@ -68,5 +68,36 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+/* Glow Gradient */
+@layer components {
+  .glow-gradient {
+    position: relative;
+  }
+
+  @layer components {
+    .glow-gradient {
+      position: relative;
+    }
+
+    .glow-gradient::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      background: radial-gradient(
+          38.7% 85.6% at 50% 100%,
+          rgba(11, 12, 20, 0.16) 0%,
+          #0b0c14 100%
+        ),
+        radial-gradient(
+          45.6% 68.2% at 50% calc(100% + 100px),
+          hsl(var(--primary)) 10%,
+          rgba(11, 12, 20, 0) 100%
+        );
+    }
   }
 }
