--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,9 +37,11 @@ body {
   .dark {
     --background: 223 29% 6%;
     --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
+    /* --card: 0 0% 3.9%; */
+    --card: 234 28% 7%;
     --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
+    /* --popover: 0 0% 3.9%; */
+    --popover: 234 28% 7%;
     --popover-foreground: 0 0% 98%;
     --primary: 198 90% 48%;
     --primary-foreground: 0 0% 100%;
@@ -47,7 +49,8 @@ body {
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
+    /* --accent: 0 0% 14.9%; */
+    --accent: 223 29% 16%;
     --accent-foreground: 0 0% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
@@ -88,7 +91,8 @@ body {
       width: 100%;
       height: 100%;
       top: 0;
-      background: radial-gradient(
+      background: url("/noise-bg-1.png"), url("/noise-bg-2.png"),
+        radial-gradient(
           38.7% 85.6% at 50% 100%,
           rgba(11, 12, 20, 0.16) 0%,
           #0b0c14 100%
