--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,7 +92,7 @@ body {
       width: 100%;
       height: 100%;
       top: 0;
-      background: url("/noise-bg-1.png"), url("/noise-bg-2.png"),
+      background: url("/noise-bg-1.webp"), url("/noise-bg-2.webp"),
         radial-gradient(
           38.7% 85.6% at 50% 100%,
           rgba(11, 12, 20, 0.16) 0%,
